update ny analysis

--- a/ny_analysis.ipynb
+++ b/ny_analysis.ipynb
@@ -110,6 +110,17 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- The model achieves a training accuracy of approximately 96.5% and a test accuracy of 95.6%, indicating good generalization and minimal overfitting.\n",
+    "- The precision, recall, and F1-scores for each class (0, 1, 2) provide deeper insights into the model’s ability to distinguish between classes:\n",
+    "  - Class 0 (Flood Zone AE): High recall (0.99) and precision (0.95) indicate the model performs well in identifying and predicting this zone.\n",
+    "  - Class 1 (Flood Zone AO): Perfect recall and precision suggest excellent model performance for this rare class.\n",
+    "  - Class 2 (Flood Zone VE): Slightly lower recall (0.90) compared to the other classes suggests room for improvement in detecting high-hazard coastal areas."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 3,
    "metadata": {},
@@ -132,6 +143,13 @@
     "plt.xlabel('Predicted')\n",
     "plt.ylabel('Actual')\n",
     "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Most predictions fall along the diagonal, indicating high accuracy."
    ]
   },
   {
@@ -179,6 +197,16 @@
     "sns.barplot(x='Importance', y='Feature', data=feature_importances)\n",
     "plt.title('Feature Importances')\n",
     "plt.show()\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Most important features in flooding:\n",
+    "- STATIC_BFE (Base Flood Elevation): The most critical feature, contributing nearly half the predictive power, aligns with domain knowledge since flood elevation is vital for flood risk assessment.\n",
+    "- ABFE_0_2Pc (Percent Area Affected by Flood): The second most important feature reflects the physical extent of flooding.\n",
+    "- Other features like Shape_Area and Shape_Length are significant but less impactful compared to STATIC_BFE."
    ]
   },
   {
@@ -280,6 +308,8 @@
    "metadata": {},
    "source": [
     "### Interpretation of the legends:\n",
+    "\n",
+    "The terms AE, AO, and VE are common flood zone designations used in Flood Insurance Rate Maps (FIRM) created by the Federal Emergency Management Agency (FEMA). These zones provide information about flood risks and are primarily used in floodplain management and flood insurance purposes. Here's what they mean:\n",
     "\n",
     "| **Zone** | **Flood Depth**             | **Wave Action**        | **BFE Available**          | **Description**                                  |\n",
     "|----------|-----------------------------|------------------------|----------------------------|-------------------------------------------------|\n",
